# zerocode

./: .gitignore  CMakeLists.txt  README.md
.ci/docker/: rockylinux.Dockerfile  ubuntu.Dockerfile
.github/workflows/: cxx.yml
src/zerocode/: CMakeLists.txt  zerocode.cps  zerocode.cxx  zerocode.pc
test/zerocode/: CMakeLists.txt  zerocode.test.cxx
